# colibri-stateless

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.AGPL  README.md  c_loop25_ctx.txt  c_loop4_ctx.txt  c_loop51_ctx.txt  c_loop52_ctx.txt  c_loop54_ctx.txt  c_loop56_ctx.txt  c_loop58_ctx.txt  c_loop59.txt  c_loop6_ctx.txt  calls.sh  check_constants.py  compare_fe.py  compare_final_2.py  compare_last.py  debug_bn254.py  debug_dbl  debug_output.txt  debug_output_cross_check.txt  debug_output_cross_check_2.txt  debug_output_endian.txt  debug_output_final.txt  debug_output_fix.txt  debug_output_l.txt  debug_output_snark1.txt  debug_pairing.py  debug_py_pairing.py  debug_trace.txt  debug_trace_2.txt  debug_trace_const.txt  debug_trace_exp.txt  doc.md  logs.txt  metrics.txt  (+25 more)
bindings/: CMakeLists.txt  colibri.c  colibri.h
bindings/docker/: .dockerignore  Dockerfile  Dockerfile.valgrind  README.md  VALGRIND_DOCKER.md  ci.yml  docker-compose.valgrind.yml  docker-compose.yml  valgrind-server.sh
bindings/emscripten/: CMakeLists.txt  README.md  code_cdfb7d322961af3acae7a8f7ee8b69c205b36f576cc5b077f170c7eb8ecbe3ea  doc.md  ems.c  package-lock.json  package.json  states_1  tsconfig.cjs.json.in  tsconfig.json
bindings/kotlin/: CMakeLists.txt  README.md  build-aar.gradle.kts  build-jar.gradle.kts  colibri.i  doc.md  gradle.properties  jni_bridge.c  settings.gradle.kts
bindings/node-addon/: binding.gyp  package-lock.json  package.json
bindings/python/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  build_debug.sh  c4.i  doc.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
bindings/rust/: .gitignore  Cargo.toml  README.md  build.rs  build.sh
bindings/swift/: CMakeLists.txt  Package.swift  Package_quick.swift  README.md  build_ios.sh  build_local.sh  build_macos.sh  build_quick.sh  create_ios_xcframework.sh  create_universal_xcframework.sh  create_xcframework.sh  doc.md
installer/: CMakeLists.txt  README.md
installer/assets/: LICENSE.rtf
installer/config/: server.conf.default  server.conf.template
installer/homebrew/: HOMEBREW.md  README.md  colibri-server.rb
installer/linux/: README.md  build_deb.sh  build_rpm.sh
installer/macos/: README.md  UNINSTALL.md  build_pkg.sh  check_installation.sh  uninstall.sh
installer/windows/: README.md  build_installer.ps1  colibri.wxs  install_service.ps1
libs/: CMakeLists.txt
libs/blst/: CMakeLists.txt
libs/civetweb/: CMakeLists.txt
libs/crypto/: CMakeLists.txt  bignum.c  ecdsa.c  rand.c
libs/curl/: CMakeLists.txt  http.c  http.h
libs/evmone/: CMakeLists.txt  evmone_c_wrapper.cpp  evmone_c_wrapper.h
libs/intx/: CMakeLists.txt  countl_zero_fallback.hpp  intx_c_api.h  intx_patch.cmake  intx_patch.hpp  test_intx.c  wrapper.cpp  wrapper.hpp
libs/libuv/: CMakeLists.txt
libs/llhttp/: CMakeLists.txt
libs/mcl/: CMakeLists.txt
libs/tommath/: CMakeLists.txt
libs/zstd/: CMakeLists.txt
src/: CMakeLists.txt
src/chains/: CMakeLists.txt  chains.cmake  verifier.cmake
src/cli/: CMakeLists.txt  config.h  main.c  proofer.c  prover.c  ssz.c  verifier.c
src/proofer/: CMakeLists.txt  README.md  beacon.c  beacon.h  beacon_cache.c  cache_keys.h  cache_warming.c  cache_warming.h  eth_req.c  eth_req.h  proof_account.c  proof_account.h  proof_logs.c  proof_receipt.c  proof_transaction.c  proofer.c  proofer.h  proofers.h  proofs.h  ssz_types.c  ssz_types.h
src/prover/: CMakeLists.txt  README.md  prover.c  prover.h
src/server/: API.md  CMakeLists.txt  README.md  beacon_watcher.c  cache.c  cache.h  configure.c  configure_server.c  handle_config.c  handle_headers.c  handle_health.c  handle_lcu.c  handle_metrics.c  handle_openapi.c  handle_proof.c  handle_unverified_rpc.c  handle_verify.c  handle_verify_storage.c  handlers.c  handlers.h  head_update.c  http_client.c  http_client.h  http_client_errors.c  http_head_poller.c  http_server.c  http_servers_select.c  http_servers_select.h  internal_calls.c  main.c  openapi.yaml  proof_handler.c  server.c  server.h  server_control.c  store.c  tracing.c  tracing.h  uv_util.h
src/util/: CMakeLists.txt  bytes.c  bytes.h  chain_props.h  chains.c  chains.h  common.h  compat.h  crypto.c  crypto.h  json.c  json.h  json_validate.c  logger.c  logger.h  patricia.c  patricia.h  patricia_trie.c  plugin.c  plugin.h  request.h  rlp.c  rlp.h  ssz.c  ssz.h  ssz_builder.c  ssz_merkle.c  state.c  state.h  version.c  version.h  win_compat.h  witness.c  witness.h
src/verifier/: CMakeLists.txt  beacon_types.c  beacon_types.h  default_synccommittee.h  eth_tx.c  eth_tx.h  sync_committee.c  sync_committee.h  sync_committee_state.c  types_beacon.c  types_beacon.h  types_verify.c  types_verify.h  verifiers.h  verify.c  verify.h  verify_account_proof.c  verify_blockhash_proof.c  verify_logs_proof.c  verify_receipt_proof.c  verify_tx_proof.c
test/: CMakeLists.txt  analyze_hex.py  check_L.py  check_L_computation.py  check_add.py  check_b2_hex.py  check_dense_mul.py  check_endomorphism_consts.py  check_fe_full.py  check_final_exp.py  check_fp12_mul.py  check_fp2_basis.py  check_g1_mul.py  check_g2_coords.py  check_lb.py  check_loop0_sqr.py  check_loop62_sqr.py  check_loop_count.py  check_pairing.py  check_pairing_curve.py  check_pairing_scalars.py  check_pairing_signs.py  check_pairing_simple.py  check_pairing_trace.py  check_pairing_trace_add.py  check_pairing_trace_points.py  check_pairing_value.py  check_py_ecc_b2.py  check_sqr.py  check_sqr_trace.py  check_twist.py  check_verification_full.py  check_verification_negated.py  check_verification_swapped.py  compare_lc.py  compare_traces.py  debug_dbl.c  debug_fe  debug_fe.c  debug_fp12_mul  (+40 more)
test/data/: body.ssz  body_11038724.ssz  c4_req_blocklhash.ssz  c4_req_sync.ssz  hash_proof.ssz  proof.ssz  proof_data.ssz  testdata.ssz
test/embedded/: CLEANUP_NOTES.md  CMakeLists.txt  Dockerfile.embedded  README.md  baremetal_linker.ld  baremetal_startup.s  baremetal_test.c  cortex-m4.ld  embedded_compat.h  linker.ld  linker_minimal.ld  minimal_verify.c  mps2_linker.ld  mps2_startup.s  (+9 more)
(+945 files in other folders)
